# diagnosis_utils

./: .gitignore  .gitlab-ci.yml  README  README.md
ci/: perform_static_code_checking.sh  setup_ws.sh
plugin_interface/: CMakeLists.txt  package.xml
plugin_interface/include/plugin_interface/: plugin.h  plugin_base.h
plugin_interfaces/: CMakeLists.txt  package.xml
plugin_interfaces/include/: robot.h
plugin_manager/: CMakeLists.txt  package.xml
plugin_manager/include/plugin_manager/: plugin_base.h  plugin_manager.h  plugin_manager_exceptions.h  plugin_spec.h
plugin_manager/src/: plugin_manager.cpp
robot_plugins/: CMakeLists.txt  first_robot_plugin_loigge.xml  package.xml
robot_plugins/include/robot_plugins/: first_robot.h  plugin_base.h  plugin_robot.h
robot_plugins/src/: firstRobot.cpp  first_robot.cpp
test_plugins/plugin_test_controlled_device_driver/: CMakeLists.txt  first_controlled_device_driver.xml  package.xml
test_plugins/plugin_test_controlled_device_driver/src/: first_controlled_device_driver.cpp
test_plugins/plugin_test_device_driver/: CMakeLists.txt  first_device_driver.xml  package.xml
test_plugins/plugin_test_device_driver/src/: first_device_driver.cpp
test_plugins/plugin_test_postprocessor/: CMakeLists.txt  first_postprocessor.xml  package.xml
test_plugins/plugin_test_postprocessor/src/: first_postprocessor.cpp
test_plugins/plugin_test_preprocessor/: CMakeLists.txt  first_preprocessor.xml  package.xml
test_plugins/plugin_test_preprocessor/src/: first_preprocessor.cpp
tug_auto_bag/scripts/: auto_bag.sh  bag_save.sh  write_repo_states.sh
tug_bresenham/: CMakeLists.txt
tug_bresenham/include/tug_bresenham/: basic_circle_iterator.h  circle_iterator.h  line_iterator.h
tug_bresenham/src/: basic_circle_iterator.cpp  circle_iterator.cpp  line_iterator.cpp
tug_bresenham/test/: test.cpp
tug_can/tug_can_interface/: CMakeLists.txt  package.xml
tug_can/tug_can_interface/launch/: can_server.launch
tug_can/tug_can_interface/src/: can_client.cpp  can_interface.cpp  can_nic_driver.cpp  can_nic_driver_host.cpp  (+3 more)
tug_can/tug_can_msgs/: CMakeLists.txt  package.xml
tug_can/tug_can_msgs/msg/: CanMessage.msg
tug_can/tug_can_msgs/srv/: ForwardCanMessages.srv
tug_can/tug_can_nic_drivers/: CMakeLists.txt  package.xml  plugins.xml
tug_can/tug_can_nic_drivers/include/tug_can_nic_drivers/: socket_can_nic_driver.h
tug_can/tug_can_nic_drivers/launch/: socket_can_server.launch
tug_can/tug_can_nic_drivers/src/: socket_can_nic_driver.cpp
tug_cfg/: CMakeLists.txt  package.xml
tug_cfg/cmake/: tug_cfg-extras.cmake  tug_cfg-extras.cmake.em
tug_cfg/scripts/: gencfg.py
tug_cfg/src/: collection.cpp  configuration.cpp  configuration_sink.cpp  configuration_source.cpp  default_constrainer.cpp  key.cpp  ros_dynamic_config_describer.cpp  ros_dynamic_config_reader.cpp  ros_dynamic_config_server.cpp  ros_dynamic_config_writer.cpp  ros_dynamic_configuration_server.cpp  ros_param_reader.cpp  struct.cpp  value.cpp  yaml_reader.cpp
tug_cfg/test/: Bar.cfg  Bar.yaml  BarConfig.yaml  bar1.yaml  test_bar_config.cpp  test_helpers.cpp  test_helpers.h  test_ros_param_reader.cpp  test_ros_param_reader.test
tug_cfg_example/: CMakeLists.txt  package.xml
tug_cfg_example/cfg/: ExampleConfig.yaml
tug_cfg_example/include/tug_cfg_example/: example_node.h  test_helpers.h
tug_cfg_example/src/: example_node.cpp
tug_cfg_example/test/: example1.yaml  test_example_config.cpp  test_helpers.cpp  test_ros_param_reader.cpp  test_ros_param_reader.test
tug_colin/: CMakeLists.txt  CTestTestfile.cmake  Makefile  package.xml
tug_colin/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
tug_colin/launch/: colin_test.launch  krikkit.launch  ps3_teleop.launch
tug_colin/src/: colin_test.cpp  conversion.cpp  krikkit.cpp
tug_controlled_device_driver/: CMakeLists.txt  package.xml
tug_devel_utils/: CMakeLists.txt  package.xml
tug_devel_utils/scripts/: tug_create_class.py
tug_device_driver/: CMakeLists.txt  package.xml
tug_joy/: CMakeLists.txt  package.xml
tug_joy/launch/: forbot_joy.launch  teleop_joy.launch
tug_joy/scripts/: mappings.py  tug_joy.py  tug_joy_actuators.py  tug_joy_base.py  tug_joy_constants.py  tug_joy_controller_mappings.py  tug_joy_forbot_config.py  tug_joy_forbot_simple_config.py  tug_joy_mappings.py  tug_joy_own_config.py  tug_joy_std_callbacks.py
tug_joy/src/: teleop_joy.cpp
tug_laser_filters/src/: inf_filter.cpp  nan_filter.cpp
tug_plugin_manager/: CMakeLists.txt  package.xml
tug_plugin_manager/src/: plugin_manager.cpp
tug_plugins/tug_plugin_krikkit2/: CMakeLists.txt  package.xml  tug_plugin_krikkit2.xml
tug_postprocessor/: CMakeLists.txt  package.xml
tug_preprocessor/: CMakeLists.txt  package.xml
tug_profiling/: CMakeLists.txt  package.xml
tug_profiling/src/: duration_measurement.cpp  profiler.cpp
tug_protobuf/tug_protobuf_cpp_example/: CMakeLists.txt  package.xml
tug_protobuf/tug_protobuf_example_msg/: CMakeLists.txt
tug_protobuf/tug_protobuf_python_example/: CMakeLists.txt  package.xml
tug_pull_subscriber/: CMakeLists.txt
tug_python_utils/scripts/: tug_python_utils.py
tug_robot_control/: CMakeLists.txt  package.xml
tug_robot_control/config/: robot_control_configuration.yaml  robot_control_configuration_colin.yaml  robot_control_configuration_krikkit2.yaml
tug_robot_control/launch/: colin.launch  krikkit2.launch  robot_control.launch
tug_robot_control/src/: robot_hardware.cpp  tug_robot_control_node.cpp
tug_static_code_checking_helper/: CMakeLists.txt  package.xml
tug_static_code_checking_helper/scripts/: analyze.sh  build.sh  softfilter
tug_testing/: CMakeLists.txt
tug_testing/src/: ParameterHelper.cpp
tug_time/: CMakeLists.txt  package.xml
tug_time/src/: Timeout.cpp  Timer.cpp
tug_timers/: CMakeLists.txt  package.xml
tug_timers/src/: Timer.cpp
tug_yaml/: CMakeLists.txt  package.xml
tug_yaml/src/: ProcessYaml.cpp
(+72 files in other folders)
