<?xml version="1.0"?>
<package>
  <name>tug_can_nic_drivers</name>
  <version>0.0.0</version>
  <description>Contains drivers for CAN interface devices. Implemented as tug_can_interface::CanNicDriver plugins.</description>

  <maintainer email="alexander.buchegger@student.tugraz.at">Alexander Buchegger</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/tug_can_nic_drivers</url> -->
  <author email="alexander.buchegger@student.tugraz.at">Alexander Buchegger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tug_can_interface</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tug_can_interface</run_depend>

  <export>
    <tug_can_interface plugin="${prefix}/plugins.xml" />
  </export>
</package>
